Swagger changes and value type defined for constants and functions
